<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qyu4.reflectontester.FivePlayer">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:id="@+id/b_playerone_in_fiveplayer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:minHeight="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_three"
        android:id="@+id/b_playerthree_in_fiveplayer"
        android:minHeight="100dp"
        android:layout_below="@+id/b_playertwo_in_fiveplayer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_five"
        android:id="@+id/b_playerfive_in_fiveplayer"
        android:minHeight="100dp"
        android:layout_below="@+id/b_playerfour_in_fiveplayer"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/b_playerfour_in_fiveplayer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:id="@+id/b_playertwo_in_fiveplayer"
        android:layout_below="@+id/b_playerone_in_fiveplayer"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/b_playerone_in_fiveplayer"
        android:minHeight="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_four"
        android:id="@+id/b_playerfour_in_fiveplayer"
        android:minHeight="100dp"
        android:layout_below="@+id/b_playerthree_in_fiveplayer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
