<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qyu4.reflectontester.FourPlayer">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:id="@+id/b_player_one_in_fourplayer"
        android:minWidth="168dp"
        android:minHeight="276dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_three"
        android:id="@+id/b_player_three_in_fourplayer"
        android:minWidth="168dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b_player_one_in_fourplayer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_four"
        android:id="@+id/b_player_four_in_fourplayer"
        android:minWidth="168dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/b_player_three_in_fourplayer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:id="@+id/b_player_two_in_fourplayer"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:minHeight="276dp"
        android:minWidth="168dp" />

</RelativeLayout>
