<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qyu4.reflectontester.ThreePlayer">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:id="@+id/b_player_one_in_threeplayer"
        android:padding="80dip"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/b_player_two_in_threeplayer"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:id="@+id/b_player_two_in_threeplayer"
        android:padding="80dip"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/b_player_three_in_threeplayer"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_three"
        android:id="@+id/b_player_three_in_threeplayer"
        android:padding="80dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
